simple-react-full-stack/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-react-full-stack
  labels:
    app: simple-react-full-stack
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: simple-react-full-stack
  template:
    metadata:
      labels:
        app: simple-react-full-stack
    spec:
      containers:
      - name: simple-react-full-stack
        image: nicus98/simple-react-full-stack:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /api/getUsername
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 3
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /api/getUsername
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
