simple-react-full-stack/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-react-full-stack
spec:
  type: ClusterIP
  selector:
    app: simple-react-full-stack
  ports:
  - port: 80
    targetPort: 8080
